# tauview

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  CONTRIBUTING.md  LICENSE.md  README.md  biome.json  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  webpack.config.ts
.github/workflows/: release.yml  stale-issues.yml
coverage/: coverage-summary.json
docs/: index.html
src/: App.scss  App.test.tsx  App.tsx  Grid.scss  Grid.tsx  ToolBar.scss  ToolBar.tsx  View.tsx  index.dev.html  index.ejs  index.html  index.scss  index.tsx  setLocales.ts
src-tauri/: .env.vault  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/locales/: ar.json  cs.json  de.json  en.json  es.json  fr.json  hi.json  hu.json  it.json  ja.json  pl.json  pt.json  ru.json  tr.json  uk.json  zh_CN.json  zh_TW.json
src-tauri/src/: cmd.rs  locales.rs  main.rs  menu.rs
src-tauri/src/menu/: locales.rs
src/__tests__/: App.test.tsx  Grid.test.tsx  ToolBar.test.tsx  View.test.tsx
src/components/: App.scss  App.test.tsx  App.tsx  Grid.scss  Grid.test.tsx  Grid.tsx  ToolBar.test.tsx  ToolBar.tsx  View.test.tsx  View.tsx
src/components/icons/: ArrowLeft.tsx  ArrowRight.tsx  FolderOpen.tsx  Trash.tsx
src/icons/: ArrowLeft.tsx  ArrowRight.tsx  FolderOpen.tsx  Trash.tsx
web/: ToolBar.tsx  index.html  index.tsx  setLocales.ts
web/components/: App.tsx  ToolBar.tsx
