[package]
name = "leafview-tauri"
version = "0.0.1"
description = "A minimalist image viewer"
authors = ["sprout2000"]
license = "MIT"
repository = "https://github.com/sprout2000/leafview-tauri/"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog-open", "path-all", "protocol-asset", "shell-open", "window-set-title"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
infer = "0.13.0"
trash = "3.0.2"
json-gettext = "4.0.5"
sys-locale = "0.3.0"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
